# EDA3

./: Broker.files  Broker.includes  CMakeLists.txt
common/: CMakeLists.txt  application.cpp  application.h  client.cpp  client.h  clientProxy.cpp  clientProxy.h  connection.cpp  connection.h  controlEvent.h  eventTransmitter.h  processor.h  serializer.h  type.h  types.h  zeromqConnection.h
tests/: CMakeLists.txt  broker.cpp  fileReaderClient.cpp  filedataReceiverClient.cpp  filenameListGeneratorClient.cpp  wildcardSenderClient.cpp
